# cl3

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Makefile  build-debug.sh  build-release.sh  build.sh  bundle.pem  compile.sh  conti-build.sh  editor.sh  infrabox.json  infrabox.txt  linux-clang.conf  linux-g++.conf  valgrind.supp
.jenkins/: Dockerfile  run.sh
core/: Makefile  compiler.h  context.hpp  cpu.h  def.h  error-base.cpp  error-base.hpp  error-base.posix.cpp  error-ext.hpp  error.cpp  error.h  error.hpp  error.posix.cpp  error.windows.cpp  event.h  event.hpp  init.cpp  io.h  io.hpp  io_buffer.hpp  io_collection.cpp  io_collection.h  io_collection.hpp  io_collection_array.hpp  io_collection_basiclist.hpp  io_collection_bitmask.cpp  io_collection_bitmask.h  io_collection_bitmask.hpp  io_collection_list.cpp  io_collection_list.h  io_collection_list.hpp  io_file.hpp  io_file.linux.cpp  io_file.posix.cpp  io_stream-base.cpp  io_stream-base.hpp  io_stream-util.hpp  io_stream.cpp  io_stream.h  io_stream.hpp  (+56 more)
data/tests/folder_with_mixed_files/: small_text_file.txt
db/: Makefile  db.hpp
doc/: atom.txt  logging and tracing.txt
examples/how-to-use-source-bundle/: Makefile  example  example.cpp
image-builder/infrabox/@/: Dockerfile  generator.sh
image-builder/infrabox/debian-9-clang/: Dockerfile
image-builder/infrabox/debian-9-gcc/: Dockerfile
image-builder/infrabox/debian-9_0-clang/: Dockerfile
image-builder/infrabox/debian-9_0-gcc/: Dockerfile
image-builder/infrabox/debian-testing-clang/: Dockerfile
image-builder/infrabox/debian-unstable-clang/: Dockerfile
image-builder/infrabox/debian-unstable-gcc/: Dockerfile
image-builder/infrabox/opensuse-42_1-clang/: Dockerfile
infrabox/@/: generator.sh
infrabox/debian-9-clang/: Dockerfile  Dockerfile.compile  Dockerfile.tests
infrabox/debian-9-gcc/: Dockerfile  Dockerfile.compile
infrabox/debian-9_0-clang/: Dockerfile  Dockerfile.compile
infrabox/debian-9_0-gcc/: Dockerfile  Dockerfile.compile  Dockerfile.tests
infrabox/debian-testing-clang/: Dockerfile  Dockerfile.compile  Dockerfile.tests
infrabox/debian-testing-gcc/: Dockerfile  Dockerfile.compile
infrabox/debian-unstable-clang/: Dockerfile  Dockerfile.compile
infrabox/debian-unstable-gcc/: Dockerfile  Dockerfile.compile  Dockerfile.tests
infrabox/opensuse-42_1-clang/: Dockerfile  Dockerfile.compile  Dockerfile.tests
infrabox/opensuse-42_1-gcc/: Dockerfile  Dockerfile.compile
infrabox/opensuse-42_2-clang/: Dockerfile  Dockerfile.compile  Dockerfile.tests
infrabox/opensuse-42_2-gcc/: Dockerfile  Dockerfile.compile
infrabox/opensuse-42_3-clang/: Dockerfile  Dockerfile.compile  Dockerfile.tests
infrabox/opensuse-42_3-gcc/: Dockerfile  Dockerfile.compile
infrabox/opensuse-tumbleweed-clang/: Dockerfile  Dockerfile.compile
infrabox/opensuse-tumbleweed-gcc/: Dockerfile  Dockerfile.compile  Dockerfile.tests
mm/: Makefile  time_calendar.hpp
package/opensuse/: libcl3-core-devel.spec  libcl3-core-tests.spec  libcl3-core.spec
src/: CMakeLists.txt
src/core/: CMakeLists.txt  atom.cpp  atom.hpp  context.hpp  error.cpp  error.hpp  error.posix.cpp  error.windows.cpp  error_diag.gnu.cpp  error_diag.hpp  event.cpp  event.hpp  extern_gauss.cpp  extern_lookup3.cpp  io.hpp  io_buffer.hpp  io_collection.cpp  io_collection.hpp  io_collection_array.hpp  io_collection_basiclist.hpp  io_collection_bitmask.cpp  io_collection_bitmask.hpp  io_collection_list.hpp  io_collection_list_v2.hpp  io_collection_map.hpp  io_collection_matcher.hpp  io_collection_sort.hpp  io_file.hpp  io_file.linux.cpp  io_file.posix.cpp  io_format.cpp  io_format.hpp  io_format_json.cpp  io_format_json.hpp  io_format_json.l  io_format_json.parser.cpp  io_format_xml.cpp  io_format_xml.hpp  io_hash.cpp  io_hash.hpp  (+86 more)
src/core/test/: CMakeLists.txt  Makefile  common.cpp  common.hpp  context.cpp  io_buffer.cpp  io_collection.cpp  io_collection_v2.cpp  io_file.cpp  io_format.cpp  io_hash.cpp  io_network.cpp  io_serialization.cpp  io_stdio.cpp  io_text.cpp  math.cpp  math_formular.cpp  system_compiler_jit.cpp  system_endian.cpp  system_library.cpp  system_memory.cpp  system_random.cpp  system_task.cpp  system_task_synchronization.cpp  system_time.cpp  system_types_typeinfo.cpp  util.cpp
src/db/: CMakeLists.txt  db.hpp  dp.cpp
src/db/test/: CMakeLists.txt
src/extlib/: CMakeLists.txt  gauss.cpp  lookup3.c
src/gpio/: CMakeLists.txt  bcm2835.c  bcm2835.h  config.hpp  io_phy.cpp  io_phy.hpp  io_phy_bcm2835.cpp  io_phy_bcm2835.hpp  io_phy_radio.cpp  io_phy_radio.hpp  io_phy_radio_rfm.cpp  io_phy_radio_rfm.hpp
src/gpio/test/: CMakeLists.txt  bcm2835.cpp  io_phy_radio.cpp  io_phy_radio_rfm.cpp
src/llvm/: config.hpp  io_text_parser.cpp  io_text_parser.hpp  math_formular.cpp  math_formular.hpp  system_compiler_jit.cpp  system_compiler_jit.hpp
src/mm/: CMakeLists.txt  io_format_json.hpp  time_calendar.cpp  time_calendar.hpp  ui.cpp  ui.hpp  ui_console.hpp
src/mm/test/: CMakeLists.txt  Makefile  time_calendar.cpp
test/: Makefile  cppcheck  cppcheck-1.65.tar.bz2  test.cpp
test/core/: Makefile  io_collection.cpp  io_file.cpp  io_text.cpp  system_memory.cpp  system_task.cpp  system_time.cpp  system_types_typeinfo.cpp  util.cpp
test/coverage/: Makefile
test/db/: Makefile  db.cpp
test/gmock/: Makefile  config.status  libtool
test/gtest/: Makefile  config.status
test/gtest-1.7.0/: configure
test/include/: cl3  gmock  gtest
test/lib/: libgmock.so.0  libgmock.so.0.0.0  libgtest.so.0  libgtest.so.0.0.0
test/mm/: Makefile
test/test-core/: Makefile  test-collection.cpp  test-context.cpp  test-memory.cpp  test-text.cpp  test-time.cpp  test-typeinfo.cpp
test/test-mm/: Makefile  test-time_calendar.cpp
tools/: mkMakeSharedPtr.sh  mkTRefCountersh
util/: build-base.sh  build-core-lib.sh  build-debian-packages.sh  build-gtest.sh  build-lib.sh  build-llvm-lib.sh  build-post.sh  build-source-bundle.sh  build-suse-packages.sh  clean-term.sh  common.sh  cppcheck-1.66.tar.bz2  test-source-bundle-core.cpp  test-source-bundle-llvm.cpp  valgrind  valgrind.supp
(+33 files in other folders)
